# smartusbhub_cli

./: .gitignore  DESIGN.md  README.md  pyproject.toml  smartusbhub_cli.spec
.github/workflows/: build.yml
scripts/: build.sh
src/smartusbhub_cli/: __init__.py  __main__.py  cli.py  client.py  commit.py  config.py  http_server.py  mcp_server.py  protocol.py  utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_http_server.py  test_mcp_server.py  test_protocol.py  test_utils.py
